# data-engineering-projects

ai-voice-bot/: README.md  pyproject.toml
ai-voice-bot/ai_voice_bot/: main.py
ai_voice_bot/: .env_template
pyspark_common_tasks/: .gitignore  README.md  requirements.txt
pyspark_common_tasks/src/scripts/: advanced_aggregation_pipeline.py  dataset_creator.py  nested_json_flattening_and_optimization.py
pyspark_programming_problems/: 5th_highest_revenue.py  aircraft_utilization_rate.py  cheapest_and_fastest_flight.py  clickstream.py  coalesce_columns.py  customer_transaction.py  devices_grouped_by_brand_and_language.py  direct_report_count.py  direct_reports.py  employee_poach.py  employee_punch_time.py  fill_missing_salaries_with_average.py  find_highest_salary_appearing_only_once.py  find_trasaction_count_by_product.py  flatten_json.py  group_items.py  group_rows.py  highest_and_lowest_salary.py  highest_mark_for_each_subject.py  invalid_transactions.py  json_data.py  max_salary.py  min_num_of_platforms.py  most_profitable_based_on_duration_and_amount.py  oscar_wins_genres.py  pivot_columns_into_rows.py  pizza_toppings.py  purchase_behavior.py  remove_duplicates.py  repeat_ids.py  requirements.py  session_activity.py  session_order_status.py  top_10_hotels.py  top_3_salarys_by_department.py  unique_user_per_clients_per_month.py  word_count.py
pyspark_programming_problems/data/: customer_transaction.csv  revenue.csv  sample_data.json
