[tool.poetry]
name = "ai-voice-bot"
version = "0.1.0"
description = ""
authors = ["Carl Chinatomby <Carl.Chinatomby@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
assemblyai = {extras = ["extras"], version = "^0.33.0"}
elevenlabs = "^1.9.0"
openai = "^1.50.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
